--- a/main.css
+++ b/main.css
@@ -3,15 +3,16 @@
   padding: 0;
   box-sizing: border-box;
 }
-
-body,
-html {
+html,
+body {
   width: 100%;
   height: 100%;
   overflow: hidden;
   background: #000;
+  touch-action: manipulation;
 }
-
 canvas {
   display: block;
+  width: 100vw;
+  height: 100vh;
 }
